src/test/resources/typeSystemTestModels/invalid/classes/GenericClassNotSubClassOfThrowable.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.classes;

import java.lang.Throwable;

public class GenericClassNotSubClassOfThrowable<T> extends Throwable {

}
